--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ OPDF/resources/
 OPDF/LICENSE
 OPDF/README.md
 OPDF_Qwen3/OPDF/Qwen3-base/distilled_qwen2_0_5b_kd_modular
+OPDF_Qwen3/OPDF/Qwen3-base/distilled_qwen2_0_5b_kd_modular/*
