--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ OPDF/LICENSE
 OPDF/README.md
 OPDF/Qwen3-base/distilled_qwen2_0_5b_kd_modular
 OPDF/Qwen3-base/distilled_qwen2_0_5b_kd_modular/
+OPDF/Qwen3-base/distilled_qwen2_0_5b_mmp_kd_modular
