mpo full result and vanila KD ongoing

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ OPDF/README.md
 OPDF/Qwen3-base/distilled_qwen2_0_5b_kd_modular
 OPDF/Qwen3-base/distilled_qwen2_0_5b_kd_modular/
 OPDF/Qwen3-base/distilled_qwen2_0_5b_mmp_kd_modular
+OPDF/Qwen3-base/distilled_qwen2_0_5b_mpo_kd_modular
