--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ OPDF/Qwen3-base/distilled_qwen2_0_5b_kd_modular
 OPDF/Qwen3-base/distilled_qwen2_0_5b_kd_modular/
 OPDF/Qwen3-base/distilled_qwen2_0_5b_mmp_kd_modular
 OPDF/Qwen3-base/distilled_qwen2_0_5b_mpo_kd_modular
+OPDF/Qwen3-base/distilled_qwen2_0_5b_mpo_kd_frozen
